src/ParRwhile.output
   0  $accept : %entry% $end

   1  pProgram : program TOK_EOF
   2           | error

   3  pValT : valT TOK_EOF
   4        | error

   5  program : proc_list

   6  proc_list :
   7            | proc
   8            | proc SYMB1 proc_list

   9  proc : TOK_proc rIdent SYMB2 pat SYMB3 com_list TOK_return pat
  10       | TOK_func rIdent SYMB2 pat SYMB3 fexp

  11  com : rIdent SYMB4 exp
  12      | pat SYMB5 pat
  13      | TOK_if exp thenBranch elseBranch TOK_fi exp
  14      | TOK_from exp doBranch loopBranch TOK_until exp
  15      | TOK_show exp

  16  com_list :
  17           | com_list com SYMB1

  18  thenBranch : TOK_then com_list
  19             |

  20  elseBranch : TOK_else com_list
  21             |

  22  doBranch : TOK_do com_list
  23           |

  24  loopBranch : TOK_loop com_list
  25             |

  26  fexp : TOK_if exp TOK_then fexp TOK_else fexp
  27       | TOK_return exp

  28  exp : TOK_not exp1
  29      | TOK_atom exp1
  30      | TOK_cons exp1 exp1
  31      | TOK_hd exp1
  32      | TOK_tl exp1
  33      | TOK_eval rIdent SYMB2 exp SYMB3
  34      | SYMB6 exp1 exp1
  35      | SYMB7 exp1 exp1
  36      | SYMB5 exp1 exp1
  37      | SYMB8 exp1 exp1
  38      | SYMB9 exp1 exp1
  39      | SYMB10 exp1 exp1
  40      | SYMB11 exp1 exp1
  41      | exp1

  42  exp1 : variable
  43       | valT
  44       | SYMB2 exp SYMB3

  45  pat : SYMB2 pat SYMB12 pat SYMB3
  46      | variable
  47      | atom
  48      | TOK_nil
  49      | TOK_call rIdent SYMB2 pat SYMB3
  50      | TOK_uncall rIdent SYMB2 pat SYMB3

  51  valT : TOK_nil
  52       | atom
  53       | SYMB2 valT SYMB12 valT SYMB3

  54  variable : rIdent

  55  rIdent : TOK_RIdent

  56  atom : TOK_Atom

  57  %entry% : '\001' pProgram
  58          | '\002' pValT

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . pProgram  (57)
	proc_list : .  (6)

	error  shift 4
	TOK_func  shift 5
	TOK_proc  shift 6
	TOK_EOF  reduce 6

	pProgram  goto 7
	program  goto 8
	proc_list  goto 9
	proc  goto 10


state 2
	%entry% : '\002' . pValT  (58)

	error  shift 11
	TOK_nil  shift 12
	SYMB2  shift 13
	TOK_Atom  shift 14
	.  error

	pValT  goto 15
	valT  goto 16
	atom  goto 17


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	pProgram : error .  (2)

	.  reduce 2


state 5
	proc : TOK_func . rIdent SYMB2 pat SYMB3 fexp  (10)

	TOK_RIdent  shift 18
	.  error

	rIdent  goto 19


state 6
	proc : TOK_proc . rIdent SYMB2 pat SYMB3 com_list TOK_return pat  (9)

	TOK_RIdent  shift 18
	.  error

	rIdent  goto 20


state 7
	%entry% : '\001' pProgram .  (57)

	.  reduce 57


state 8
	pProgram : program . TOK_EOF  (1)

	TOK_EOF  shift 21
	.  error


state 9
	program : proc_list .  (5)

	.  reduce 5


state 10
	proc_list : proc .  (7)
	proc_list : proc . SYMB1 proc_list  (8)

	SYMB1  shift 22
	TOK_EOF  reduce 7


state 11
	pValT : error .  (4)

	.  reduce 4


state 12
	valT : TOK_nil .  (51)

	.  reduce 51


state 13
	valT : SYMB2 . valT SYMB12 valT SYMB3  (53)

	TOK_nil  shift 12
	SYMB2  shift 13
	TOK_Atom  shift 14
	.  error

	valT  goto 23
	atom  goto 17


state 14
	atom : TOK_Atom .  (56)

	.  reduce 56


state 15
	%entry% : '\002' pValT .  (58)

	.  reduce 58


state 16
	pValT : valT . TOK_EOF  (3)

	TOK_EOF  shift 24
	.  error


state 17
	valT : atom .  (52)

	.  reduce 52


state 18
	rIdent : TOK_RIdent .  (55)

	.  reduce 55


state 19
	proc : TOK_func rIdent . SYMB2 pat SYMB3 fexp  (10)

	SYMB2  shift 25
	.  error


state 20
	proc : TOK_proc rIdent . SYMB2 pat SYMB3 com_list TOK_return pat  (9)

	SYMB2  shift 26
	.  error


state 21
	pProgram : program TOK_EOF .  (1)

	.  reduce 1


state 22
	proc_list : proc SYMB1 . proc_list  (8)
	proc_list : .  (6)

	TOK_func  shift 5
	TOK_proc  shift 6
	TOK_EOF  reduce 6

	proc_list  goto 27
	proc  goto 10


state 23
	valT : SYMB2 valT . SYMB12 valT SYMB3  (53)

	SYMB12  shift 28
	.  error


state 24
	pValT : valT TOK_EOF .  (3)

	.  reduce 3


state 25
	proc : TOK_func rIdent SYMB2 . pat SYMB3 fexp  (10)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 34
	variable  goto 35
	atom  goto 36


state 26
	proc : TOK_proc rIdent SYMB2 . pat SYMB3 com_list TOK_return pat  (9)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 37
	variable  goto 35
	atom  goto 36


state 27
	proc_list : proc SYMB1 proc_list .  (8)

	.  reduce 8


state 28
	valT : SYMB2 valT SYMB12 . valT SYMB3  (53)

	TOK_nil  shift 12
	SYMB2  shift 13
	TOK_Atom  shift 14
	.  error

	valT  goto 38
	atom  goto 17


state 29
	pat : TOK_call . rIdent SYMB2 pat SYMB3  (49)

	TOK_RIdent  shift 18
	.  error

	rIdent  goto 39


state 30
	pat : TOK_nil .  (48)

	.  reduce 48


state 31
	pat : TOK_uncall . rIdent SYMB2 pat SYMB3  (50)

	TOK_RIdent  shift 18
	.  error

	rIdent  goto 40


state 32
	pat : SYMB2 . pat SYMB12 pat SYMB3  (45)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 41
	variable  goto 35
	atom  goto 36


state 33
	variable : rIdent .  (54)

	.  reduce 54


state 34
	proc : TOK_func rIdent SYMB2 pat . SYMB3 fexp  (10)

	SYMB3  shift 42
	.  error


state 35
	pat : variable .  (46)

	.  reduce 46


state 36
	pat : atom .  (47)

	.  reduce 47


state 37
	proc : TOK_proc rIdent SYMB2 pat . SYMB3 com_list TOK_return pat  (9)

	SYMB3  shift 43
	.  error


state 38
	valT : SYMB2 valT SYMB12 valT . SYMB3  (53)

	SYMB3  shift 44
	.  error


state 39
	pat : TOK_call rIdent . SYMB2 pat SYMB3  (49)

	SYMB2  shift 45
	.  error


state 40
	pat : TOK_uncall rIdent . SYMB2 pat SYMB3  (50)

	SYMB2  shift 46
	.  error


state 41
	pat : SYMB2 pat . SYMB12 pat SYMB3  (45)

	SYMB12  shift 47
	.  error


state 42
	proc : TOK_func rIdent SYMB2 pat SYMB3 . fexp  (10)

	TOK_if  shift 48
	TOK_return  shift 49
	.  error

	fexp  goto 50


state 43
	proc : TOK_proc rIdent SYMB2 pat SYMB3 . com_list TOK_return pat  (9)
	com_list : .  (16)

	.  reduce 16

	com_list  goto 51


state 44
	valT : SYMB2 valT SYMB12 valT SYMB3 .  (53)

	.  reduce 53


state 45
	pat : TOK_call rIdent SYMB2 . pat SYMB3  (49)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 52
	variable  goto 35
	atom  goto 36


state 46
	pat : TOK_uncall rIdent SYMB2 . pat SYMB3  (50)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 53
	variable  goto 35
	atom  goto 36


state 47
	pat : SYMB2 pat SYMB12 . pat SYMB3  (45)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 54
	variable  goto 35
	atom  goto 36


state 48
	fexp : TOK_if . exp TOK_then fexp TOK_else fexp  (26)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 70
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 49
	fexp : TOK_return . exp  (27)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 73
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 50
	proc : TOK_func rIdent SYMB2 pat SYMB3 fexp .  (10)

	.  reduce 10


state 51
	proc : TOK_proc rIdent SYMB2 pat SYMB3 com_list . TOK_return pat  (9)
	com_list : com_list . com SYMB1  (17)

	TOK_call  shift 29
	TOK_from  shift 74
	TOK_if  shift 75
	TOK_nil  shift 30
	TOK_return  shift 76
	TOK_show  shift 77
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 78
	pat  goto 79
	com  goto 80
	variable  goto 35
	atom  goto 36


state 52
	pat : TOK_call rIdent SYMB2 pat . SYMB3  (49)

	SYMB3  shift 81
	.  error


state 53
	pat : TOK_uncall rIdent SYMB2 pat . SYMB3  (50)

	SYMB3  shift 82
	.  error


state 54
	pat : SYMB2 pat SYMB12 pat . SYMB3  (45)

	SYMB3  shift 83
	.  error


state 55
	exp : TOK_atom . exp1  (29)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 84
	variable  goto 72
	atom  goto 17


state 56
	exp : TOK_cons . exp1 exp1  (30)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 85
	variable  goto 72
	atom  goto 17


state 57
	exp : TOK_eval . rIdent SYMB2 exp SYMB3  (33)

	TOK_RIdent  shift 18
	.  error

	rIdent  goto 86


state 58
	exp : TOK_hd . exp1  (31)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 87
	variable  goto 72
	atom  goto 17


state 59
	exp : TOK_not . exp1  (28)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 88
	variable  goto 72
	atom  goto 17


state 60
	exp : TOK_tl . exp1  (32)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 89
	variable  goto 72
	atom  goto 17


state 61
	exp1 : SYMB2 . exp SYMB3  (44)
	valT : SYMB2 . valT SYMB12 valT SYMB3  (53)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 90
	rIdent  goto 33
	exp  goto 91
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 62
	exp : SYMB5 . exp1 exp1  (36)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 92
	variable  goto 72
	atom  goto 17


state 63
	exp : SYMB6 . exp1 exp1  (34)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 93
	variable  goto 72
	atom  goto 17


state 64
	exp : SYMB7 . exp1 exp1  (35)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 94
	variable  goto 72
	atom  goto 17


state 65
	exp : SYMB8 . exp1 exp1  (37)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 95
	variable  goto 72
	atom  goto 17


state 66
	exp : SYMB9 . exp1 exp1  (38)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 96
	variable  goto 72
	atom  goto 17


state 67
	exp : SYMB10 . exp1 exp1  (39)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 97
	variable  goto 72
	atom  goto 17


state 68
	exp : SYMB11 . exp1 exp1  (40)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 98
	variable  goto 72
	atom  goto 17


state 69
	exp1 : valT .  (43)

	.  reduce 43


state 70
	fexp : TOK_if exp . TOK_then fexp TOK_else fexp  (26)

	TOK_then  shift 99
	.  error


state 71
	exp : exp1 .  (41)

	.  reduce 41


state 72
	exp1 : variable .  (42)

	.  reduce 42


state 73
	fexp : TOK_return exp .  (27)

	.  reduce 27


state 74
	com : TOK_from . exp doBranch loopBranch TOK_until exp  (14)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 100
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 75
	com : TOK_if . exp thenBranch elseBranch TOK_fi exp  (13)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 101
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 76
	proc : TOK_proc rIdent SYMB2 pat SYMB3 com_list TOK_return . pat  (9)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 102
	variable  goto 35
	atom  goto 36


state 77
	com : TOK_show . exp  (15)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 103
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 78
	com : rIdent . SYMB4 exp  (11)
	variable : rIdent .  (54)

	SYMB4  shift 104
	SYMB5  reduce 54


state 79
	com : pat . SYMB5 pat  (12)

	SYMB5  shift 105
	.  error


state 80
	com_list : com_list com . SYMB1  (17)

	SYMB1  shift 106
	.  error


state 81
	pat : TOK_call rIdent SYMB2 pat SYMB3 .  (49)

	.  reduce 49


state 82
	pat : TOK_uncall rIdent SYMB2 pat SYMB3 .  (50)

	.  reduce 50


state 83
	pat : SYMB2 pat SYMB12 pat SYMB3 .  (45)

	.  reduce 45


state 84
	exp : TOK_atom exp1 .  (29)

	.  reduce 29


state 85
	exp : TOK_cons exp1 . exp1  (30)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 107
	variable  goto 72
	atom  goto 17


state 86
	exp : TOK_eval rIdent . SYMB2 exp SYMB3  (33)

	SYMB2  shift 108
	.  error


state 87
	exp : TOK_hd exp1 .  (31)

	.  reduce 31


state 88
	exp : TOK_not exp1 .  (28)

	.  reduce 28


state 89
	exp : TOK_tl exp1 .  (32)

	.  reduce 32


state 90
	exp1 : valT .  (43)
	valT : SYMB2 valT . SYMB12 valT SYMB3  (53)

	SYMB12  shift 28
	SYMB3  reduce 43


state 91
	exp1 : SYMB2 exp . SYMB3  (44)

	SYMB3  shift 109
	.  error


state 92
	exp : SYMB5 exp1 . exp1  (36)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 110
	variable  goto 72
	atom  goto 17


state 93
	exp : SYMB6 exp1 . exp1  (34)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 111
	variable  goto 72
	atom  goto 17


state 94
	exp : SYMB7 exp1 . exp1  (35)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 112
	variable  goto 72
	atom  goto 17


state 95
	exp : SYMB8 exp1 . exp1  (37)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 113
	variable  goto 72
	atom  goto 17


state 96
	exp : SYMB9 exp1 . exp1  (38)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 114
	variable  goto 72
	atom  goto 17


state 97
	exp : SYMB10 exp1 . exp1  (39)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 115
	variable  goto 72
	atom  goto 17


state 98
	exp : SYMB11 exp1 . exp1  (40)

	TOK_nil  shift 12
	SYMB2  shift 61
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp1  goto 116
	variable  goto 72
	atom  goto 17


state 99
	fexp : TOK_if exp TOK_then . fexp TOK_else fexp  (26)

	TOK_if  shift 48
	TOK_return  shift 49
	.  error

	fexp  goto 117


state 100
	com : TOK_from exp . doBranch loopBranch TOK_until exp  (14)
	doBranch : .  (23)

	TOK_do  shift 118
	TOK_loop  reduce 23
	TOK_until  reduce 23

	doBranch  goto 119


state 101
	com : TOK_if exp . thenBranch elseBranch TOK_fi exp  (13)
	thenBranch : .  (19)

	TOK_then  shift 120
	TOK_else  reduce 19
	TOK_fi  reduce 19

	thenBranch  goto 121


state 102
	proc : TOK_proc rIdent SYMB2 pat SYMB3 com_list TOK_return pat .  (9)

	.  reduce 9


state 103
	com : TOK_show exp .  (15)

	.  reduce 15


state 104
	com : rIdent SYMB4 . exp  (11)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 122
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 105
	com : pat SYMB5 . pat  (12)

	TOK_call  shift 29
	TOK_nil  shift 30
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	rIdent  goto 33
	pat  goto 123
	variable  goto 35
	atom  goto 36


state 106
	com_list : com_list com SYMB1 .  (17)

	.  reduce 17


state 107
	exp : TOK_cons exp1 exp1 .  (30)

	.  reduce 30


state 108
	exp : TOK_eval rIdent SYMB2 . exp SYMB3  (33)

	TOK_atom  shift 55
	TOK_cons  shift 56
	TOK_eval  shift 57
	TOK_hd  shift 58
	TOK_nil  shift 12
	TOK_not  shift 59
	TOK_tl  shift 60
	SYMB2  shift 61
	SYMB5  shift 62
	SYMB6  shift 63
	SYMB7  shift 64
	SYMB8  shift 65
	SYMB9  shift 66
	SYMB10  shift 67
	SYMB11  shift 68
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	.  error

	valT  goto 69
	rIdent  goto 33
	exp  goto 124
	exp1  goto 71
	variable  goto 72
	atom  goto 17


state 109
	exp1 : SYMB2 exp SYMB3 .  (44)

	.  reduce 44


state 110
	exp : SYMB5 exp1 exp1 .  (36)

	.  reduce 36


state 111
	exp : SYMB6 exp1 exp1 .  (34)

	.  reduce 34


state 112
	exp : SYMB7 exp1 exp1 .  (35)

	.  reduce 35


state 113
	exp : SYMB8 exp1 exp1 .  (37)

	.  reduce 37


state 114
	exp : SYMB9 exp1 exp1 .  (38)

	.  reduce 38


state 115
	exp : SYMB10 exp1 exp1 .  (39)

	.  reduce 39


state 116
	exp : SYMB11 exp1 exp1 .  (40)

	.  reduce 40


state 117
	fexp : TOK_if exp TOK_then fexp . TOK_else fexp  (26)

	TOK_else  shift 125
	.  error


state 118
	doBranch : TOK_do . com_list  (22)
	com_list : .  (16)

	.  reduce 16

	com_list  goto 126


state 119
	com : TOK_from exp doBranch . loopBranch TOK_until exp  (14)
	loopBranch : .  (25)

	TOK_loop  shift 127
	TOK_until  reduce 25

	loopBranch  goto 128


state 120
	thenBranch : TOK_then . com_list  (18)
	com_list : .  (16)

	.  reduce 16

	com_list  goto 129


state 121
	com : TOK_if exp thenBranch . elseBranch TOK_fi exp  (13)
	elseBranch : .  (21)

	TOK_else  shift 130
	TOK_fi  reduce 21

	elseBranch  goto 131


state 122
	com : rIdent SYMB4 exp .  (11)

	.  reduce 11


state 123
	com : pat SYMB5 pat .  (12)

	.  reduce 12


state 124
	exp : TOK_eval rIdent SYMB2 exp . SYMB3  (33)

	SYMB3  shift 132
	.  error


state 125
	fexp : TOK_if exp TOK_then fexp TOK_else . fexp  (26)

	TOK_if  shift 48
	TOK_return  shift 49
	.  error

	fexp  goto 133


state 126
	com_list : com_list . com SYMB1  (17)
	doBranch : TOK_do com_list .  (22)

	TOK_call  shift 29
	TOK_from  shift 74
	TOK_if  shift 75
	TOK_nil  shift 30
	TOK_show  shift 77
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	TOK_loop  reduce 22
	TOK_until  reduce 22

	rIdent  goto 78
	pat  goto 79
	com  goto 80
	variable  goto 35
	atom  goto 36


state 127
	loopBranch : TOK_loop . com_list  (24)
	com_list : .  (16)

	.  reduce 16

	com_list  goto 134


state 128
	com : TOK_from exp doBranch loopBranch . TOK_until exp  (14)

	TOK_until  shift 135
	.  error


state 129
	com_list : com_list . com SYMB1  (17)
	thenBranch : TOK_then com_list .  (18)

	TOK_call  shift 29
	TOK_from  shift 74
	TOK_if  shift 75
	TOK_nil  shift 30
	TOK_show  shift 77
	TOK_uncall  shift 31
	SYMB2  shift 32
	TOK_RIdent  shift 18
	TOK_Atom  shift 14
	TOK_else  reduce 18
	TOK_fi  reduce 18
